# d2tools

./: .gitignore  Cargo.toml  shell.nix
dev-http/: httpd.conf
dev-http/conf/: cert.pem  httpd-ssl.conf  key.pem
dev-http/htdocs/: index.html
src/: errors.rs  main.rs  oauth.rs  state.rs  table.rs
src/destiny/: dtos.rs  headers.rs  mod.rs  urls.rs
src/destiny/dtos/: enums.rs  mod.rs
src/server/: app_config.rs  inventory.rs  mod.rs  oauth_receiver.rs  require_authn.rs  router.rs  static_files.rs
