[package]
name = "d2tools"
version = "0.1.0"
authors = ["Judson <nyarly@gmail.com>"]

[dependencies]
tokio-tls = { version = "^0.1", features = ["tokio-proto"] }
tokio-core = "^0.1"
tokio-proto = "^0.1"
tokio-service = "^0.1"
futures = "^0.1"
futures-cpupool = "^0.1.6"
hyper = "^0.11"
hyper-tls = "^0.1"
native-tls = "^0.1"
url = "^1.0"
uritemplate = "^0.1"
oauth2 = "^1.3"
rand = "^0.3"
base64 = "^0.7"
toml = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
zip = "^0.2"
rusqlite = "^0.13"
failure = "^0.1"
tokio-retry = "^0.1"
gotham = "^0.2.0"
gotham_derive = "^0.2.0"
mime = "*"
fern = "^0.4.3"
log = "^0.3.8"
chrono = "^0.4.0"
hyper-staticfile = "^0.1.1"
